@@ -3,9 +3,9 @@ package de.jugda.registration.service;
 import de.jugda.registration.dao.RegistrationDao;
 import de.jugda.registration.model.DeregistrationForm;
 import de.jugda.registration.model.Registration;
+import jakarta.enterprise.context.ApplicationScoped;
+import jakarta.inject.Inject;
 
-import javax.enterprise.context.ApplicationScoped;
-import javax.inject.Inject;
 import java.util.List;
 
 /**
@@ -48,7 +48,7 @@ public class DeleteService {
     private void processWaitlist(String eventId) {
         List<Registration> waitlist = registrationDao.findWaitlistByEventId(eventId);
         if (!waitlist.isEmpty()) {
-            Registration waiter = waitlist.get(0);
+            Registration waiter = waitlist.getFirst();
             waiter.setWaitlist(false);
             registrationDao.save(waiter);
             emailService.sendWaitlistToAttendeeConfirmation(waiter);
